--- a/src/Repository/Repos.css
+++ b/src/Repository/Repos.css
@@ -25,3 +25,13 @@ body {
   margin: 0%;
   font-size: 2.4rem;
 }
+.loading {
+  margin-top: 4rem;
+  font-size: 3rem;
+}
+@media only screen and (max-width: 600px) {
+  .repos-heading {
+    margin: 0%;
+    font-size: 1.8rem;
+  }
+}
